--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+ios/firebase_app_id_file.json
+firebase_options.dart
+
 # Miscellaneous
 *.class
 *.log
